--- a/hizmet-detay.html
+++ b/hizmet-detay.html
@@ -32,8 +32,7 @@
 
     <!-- =========== Header Side =========== -->
     <header id="header">
-        <div
-            class="p-lg-0 px-5 pt-4 pt-lg-0 container-fluid justify-content-xl-between justify-content-lg-around justify-content-between d-flex align-items-center flex-wrap flex-lg-nowrap">
+        <div class="p-lg-0 px-5 pt-4 pt-lg-0 container-fluid justify-content-xl-between justify-content-lg-around justify-content-between d-flex align-items-center flex-wrap flex-lg-nowrap">
             <div class="logo order-0 ">
                 <a href="index.html"> <img src="assets/img/logo.png" alt="gerçek web tasarım"></a>
             </div>
@@ -88,14 +87,10 @@
                             <p>Photoshop, Illustration, Adobe XD</p>
 
                             <h5>Hedef</h5>
-                            <p>Markanızı daha üst bir boyuta taşımak için, bir logo tasarımına
-                                ihtiyacınız bulunmaktadır. Böylelikle bilinirliğiniz ile
-                                piyasadaki yerinizi alabilirsiniz.</p>
+                            <p>Markanızı daha üst bir boyuta taşımak için, bir logo tasarımına ihtiyacınız bulunmaktadır. Böylelikle bilinirliğiniz ile piyasadaki yerinizi alabilirsiniz.</p>
                             <h5>Neden Bir Logoya Sahip Olmalıyım?</h5>
                             <p>
-                                Markanızı daha üst bir boyuta taşımak için, bir logo tasarımına
-                                ihtiyacınız bulunmaktadır. Böylelikle bilinirliğiniz ile
-                                piyasadaki yerinizi alabilirsiniz.
+                                Markanızı daha üst bir boyuta taşımak için, bir logo tasarımına ihtiyacınız bulunmaktadır. Böylelikle bilinirliğiniz ile piyasadaki yerinizi alabilirsiniz.
                             </p>
                             <a class="btn-teklif" href="#">Teklif Al</a>
                         </div>
@@ -126,20 +121,18 @@
             <div class="row g-4">
 
                 <!-- 1. ikili  START-->
-                <div class="col-lg-6 col-12 website ilksira">
+                <div page="1" class="col-lg-6 col-12 limitPage">
                     <div class="img-body">
-                        <a href="referans-detay.html"> <img src="assets/img/referanslar/references-1.png"
-                                class="img-fluid"></a>
+                        <a href="referans-detay.html"> <img src="assets/img/referanslar/references-1.png" class="img-fluid"></a>
                         <div class="img-content">
                             <h4>Koç Holding</h4>
                             <h5>Makine yönetimi Sitesi</h5>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-12 website ilksira">
+                <div page="1" class="col-lg-6 col-12 limitPage">
                     <div class="img-body">
-                        <a href="referans-detay.html"> <img src="assets/img/referanslar/references-2.png"
-                                class="img-fluid"></a>
+                        <a href="referans-detay.html"> <img src="assets/img/referanslar/references-2.png" class="img-fluid"></a>
                         <div class="img-content">
                             <h4>Koç Holding</h4>
                             <h5>Makine yönetimi Sitesi</h5>
@@ -149,20 +142,18 @@
                 <!-- 1. ikili END-->
 
                 <!-- 2. ikili START -->
-                <div class="col-lg-6 col-12 website ilksira">
+                <div page="2" class="col-lg-6 col-12 limitPage">
                     <div class="img-body">
-                        <a href="referans-detay.html"> <img src="assets/img/referanslar/references-1.png"
-                                class="img-fluid"></a>
+                        <a href="referans-detay.html"> <img src="assets/img/referanslar/references-1.png" class="img-fluid"></a>
                         <div class="img-content">
                             <h4>Koç Holding</h4>
                             <h5>Makine yönetimi Sitesi</h5>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-12 website ilksira">
+                <div page="2" class="col-lg-6 col-12 limitPage">
                     <div class="img-body">
-                        <a href="referans-detay.html"> <img src="assets/img/referanslar/references-2.png"
-                                class="img-fluid"></a>
+                        <a href="referans-detay.html"> <img src="assets/img/referanslar/references-2.png" class="img-fluid"></a>
                         <div class="img-content">
                             <h4>Koç Holding</h4>
                             <h5>Makine yönetimi Sitesi</h5>
@@ -171,10 +162,32 @@
                 </div>
                 <!-- 2. ikili END-->
 
+
+                <!-- 3. ikili START -->
+                <div page="3" class="col-lg-6 col-12 limitPage">
+                    <div class="img-body">
+                        <a href="referans-detay.html"> <img src="assets/img/referanslar/references-1.png" class="img-fluid"></a>
+                        <div class="img-content">
+                            <h4>Koç Holding</h4>
+                            <h5>Makine yönetimi Sitesi</h5>
+                        </div>
+                    </div>
+                </div>
+                <div page="3" class="col-lg-6 col-12 limitPage">
+                    <div class="img-body">
+                        <a href="referans-detay.html"> <img src="assets/img/referanslar/references-2.png" class="img-fluid"></a>
+                        <div class="img-content">
+                            <h4>Koç Holding</h4>
+                            <h5>Makine yönetimi Sitesi</h5>
+                        </div>
+                    </div>
+                </div>
+                <!-- 3. ikili END-->
+
             </div>
 
             <div class="text-center mt-4">
-                <a class="all-btn" href="#">DAHA FAZLA GÖRÜNTÜLE <i class="fa-solid fa-angle-right"></i></a>
+                <a id="moreShowHizmetDetay" class="all-btn" href="#">DAHA FAZLA GÖRÜNTÜLE <i class="fa-solid fa-angle-right"></i></a>
             </div>
         </div>
     </section>
