--- a/index.html
+++ b/index.html
@@ -410,8 +410,8 @@
                     <div class="swiper-pagination d-flex justify-content-lg-start justify-content-center"></div>
                 </div>
                 <div class="d-flex justify-content-center">
-                    <div class="blog-detay-btn-prev"><i class="fa-solid fa-angle-left"></i></div>
-                    <div class="blog-detay-btn-next"><i class="fa-solid fa-angle-right"></i></div>
+                    <div class="blog-Detail-btn-prev"><i class="fa-solid fa-angle-left"></i></div>
+                    <div class="blog-Detail-btn-next"><i class="fa-solid fa-angle-right"></i></div>
                 </div>
             </div>
 
