--- a/hizmet-detay.html
+++ b/hizmet-detay.html
@@ -32,7 +32,7 @@
 
     <!-- =========== Header Side =========== -->
     <header id="header">
-        <div class="p-lg-0 px-5 pt-4 pt-lg-0 container-fluid justify-content-xl-between justify-content-lg-around justify-content-between d-flex align-items-center flex-wrap flex-lg-nowrap">
+        <div class="p-lg-0 px-5 container-fluid justify-content-xl-between justify-content-lg-around justify-content-between d-flex align-items-center flex-wrap flex-lg-nowrap">
             <div class="logo order-0 ">
                 <a href="index.html"> <img src="assets/img/logo.png" alt="gerçek web tasarım"></a>
             </div>
