--- a/raf.html
+++ b/raf.html
@@ -1,7 +1,7 @@
 <!-- =========== Header Side =========== -->
 <header id="header">
   <div
-    class="p-lg-0 px-5 pt-4 pt-lg-0 container-fluid justify-content-xl-between justify-content-lg-around justify-content-between d-flex align-items-center flex-wrap flex-lg-nowrap">
+    class="p-lg-0 px-5 container-fluid justify-content-xl-between justify-content-lg-around justify-content-between d-flex align-items-center flex-wrap flex-lg-nowrap">
     <div class="logo order-0 ">
       <img src="assets/img/logo.png" alt="gerçek web tasarım">
     </div>
@@ -44,9 +44,9 @@
 <!-- =========== Header Side pages =========== -->
 <header id="header">
   <div
-    class="p-lg-0 px-5 pt-4 pt-lg-0 container-fluid justify-content-xl-between justify-content-lg-around justify-content-between d-flex align-items-center flex-wrap flex-lg-nowrap">
+    class="p-lg-0 px-5 container-fluid justify-content-xl-between justify-content-lg-around justify-content-between d-flex align-items-center flex-wrap flex-lg-nowrap">
     <div class="logo order-0 ">
-     <a href="index.html"> <img src="assets/img/logo.png" alt="gerçek web tasarım"></a>
+      <a href="index.html"> <img src="assets/img/logo.png" alt="gerçek web tasarım"></a>
     </div>
     <div class="d-block d-lg-flex align-items-center navbar-container order-3 ">
       <nav class="d-block d-lg-flex d-lg-flex pt-4 pt-lg-0">
