--- a/kopyalanacak.html
+++ b/kopyalanacak.html
@@ -33,7 +33,7 @@
     <!-- =========== Header Side =========== -->
  <header id="header">
   <div
-    class="p-lg-0 px-5 pt-4 pt-lg-0 container-fluid justify-content-xl-between justify-content-lg-around justify-content-between d-flex align-items-center flex-wrap flex-lg-nowrap">
+    class="p-lg-0 px-5 container-fluid justify-content-xl-between justify-content-lg-around justify-content-between d-flex align-items-center flex-wrap flex-lg-nowrap">
     <div class="logo order-0 ">
      <a href="index.html"> <img src="assets/img/logo.png" alt="gerçek web tasarım"></a>
     </div>
