--- a/referans-detay.html
+++ b/referans-detay.html
@@ -33,7 +33,7 @@
     <!-- =========== Header Side =========== -->
     <header id="header">
         <div
-            class="p-lg-0 px-5 container-fluid justify-content-xl-between justify-content-lg-around justify-content-between d-flex align-items-center flex-wrap flex-lg-nowrap">
+            class="p-lg-0 px-5 container-fluid justify-content-xl-between justify-content-between justify-content-lg-around d-flex align-items-center flex-wrap flex-lg-nowrap">
             <div class="logo order-0 ">
                 <a href="index.html"> <img src="assets/img/logo.png" alt="gerçek web tasarım"></a>
             </div>
@@ -62,11 +62,10 @@
                         <li><a href="iletisim.html">İletişim</a></li>
                     </ol>
                 </nav>
-
-                <div class="d-none d-lg-flex ms-auto align-items-center search">
-                    <i class='bx bx-search'></i>
-                    <input type="text" placeholder="ARA">
-                </div>
+            </div>
+            <div class="order-1 order-lg-3 ms-auto ms-lg-0 d-flex align-items-center search">
+                <i class='bx bx-search'></i>
+                <input type="text" placeholder="ARA">
             </div>
             <i class="bi bi-list navbar-toggle d-block d-lg-none order-2 "></i>
             <a class="btn-teklif d-none d-xl-block order-5" href="#">Teklif Al</a>
