--- a/iletisim.html
+++ b/iletisim.html
@@ -86,7 +86,7 @@
                         <input type="text" placeholder="Telefonunuz">
                         <input type="text" placeholder="Eposta Adresiniz">
                         <textarea rows="6" placeholder="Belirtmek İstedikleriniz"></textarea>
-                        <a class="teklif-btn" href="#">Teklifinizi Gönderin <img src="assets/img/left.png"></a>
+                        <button class="teklif-btn">Teklifinizi Gönderin <img src="assets/img/left.png"></button>
                     </form>
                 </div>
                 <div class="col-lg-6 d-flex align-items-lg-end justify-content-lg-end order-0 order-lg-1">
