--- a/index.html
+++ b/index.html
@@ -149,16 +149,16 @@
                         <div class="swiper-slide atest all">
                             <div class="row gy-5 gy-lg-0">
                                 <div class="col-6 img-body">
-                                    <img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1.png"
-                                        class="img-fluid">
+                                    <a href="#"><img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1.png"
+                                            class="img-fluid"></a>
                                     <div class="img-content">
                                         <h4>Koç Holding</h4>
                                         <h5>Makine yönetimi Sitesi</h5>
                                     </div>
                                 </div>
                                 <div class="col-6 img-body">
-                                    <img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1-2.png"
-                                        class="img-fluid">
+                                    <a href="#"><img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1.png"
+                                            class="img-fluid"></a>
                                     <div class="img-content">
                                         <h4>Koç Holding</h4>
                                         <h5>Makine yönetimi Sitesi</h5>
@@ -170,16 +170,16 @@
                         <div class="swiper-slide atest all">
                             <div class="row">
                                 <div class="col-6 img-body">
-                                    <img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1.png"
-                                        class="img-fluid">
+                                    <a href="#"><img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1.png"
+                                            class="img-fluid"></a>
                                     <div class="img-content">
                                         <h4>Koç Holding</h4>
                                         <h5>Makine yönetimi Sitesi</h5>
                                     </div>
                                 </div>
                                 <div class="col-6 img-body">
-                                    <img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1-2.png"
-                                        class="img-fluid">
+                                    <a href="#"><img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1.png"
+                                            class="img-fluid"></a>
                                     <div class="img-content">
                                         <h4>Koç Holding</h4>
                                         <h5>Makine yönetimi Sitesi</h5>
@@ -573,7 +573,7 @@
                             <option>test</option>
                         </select>
                         <textarea rows="6" placeholder="Belirtmek İstedikleriniz"></textarea>
-                        <a class="teklif-btn" href="#">Teklifinizi Gönderin <img src="assets/img/left.png"></a>
+                        <button class="teklif-btn">Teklifinizi Gönderin <img src="assets/img/left.png"></button>
                     </form>
                 </div>
             </div>
