--- a/referans-detay.html
+++ b/referans-detay.html
@@ -128,29 +128,29 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div class="img-body">
-                                <img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1.png" class="img-fluid">
-                                <a href="" class="img-content">
+                             <a href="#"><img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1.png" class="img-fluid"></a>
+                                <div class="img-content">
                                     <h4>Koç Holding</h4>
                                     <h5>Makine yönetimi Sitesi</h5>
-                                </a>
+                                </div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="img-body">
-                                <img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1.png" class="img-fluid">
-                                <a href="" class="img-content">
+                                <a href="#"><img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1.png" class="img-fluid"></a>
+                                <div class="img-content">
                                     <h4>Koç Holding</h4>
                                     <h5>Makine yönetimi Sitesi</h5>
-                                </a>
+                                </div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="img-body">
-                                <img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1.png" class="img-fluid">
-                                <a href="" class="img-content">
+                                <a href="#"><img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1.png" class="img-fluid"></a>
+                                <div class="img-content">
                                     <h4>Koç Holding</h4>
                                     <h5>Makine yönetimi Sitesi</h5>
-                                </a>
+                                </div>
                             </div>
                         </div>
                     </div>
