--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
             <h3>neler yapıyoruz?</h3>
             <ol id="myTab" role="tablist"
                 class="d-flex justify-content-lg-between justify-content-center flex-wrap flex-lg-nowrap">
-                <li filter="all">Tümü</li>
-                <li filter="website" class="active">Website</li>
+                <li class="active" filter="all">Tümü</li>
+                <li filter="website">Website</li>
                 <li filter="logo">Logo</li>
                 <li filter="kurumsal">Kurumsal Kimlik</li>
                 <li filter="sosyal">Sosyal Medya</li>
@@ -146,44 +146,44 @@
 
                 <div class="swiper whatWeDoSwiper">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide atest all">
-                            <div class="row gy-5 gy-lg-0">
-                                <div class="col-6 img-body">
-                                    <a href="#"><img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1.png"
-                                            class="img-fluid"></a>
-                                    <div class="img-content">
-                                        <h4>Koç Holding</h4>
-                                        <h5>Makine yönetimi Sitesi</h5>
-                                    </div>
-                                </div>
-                                <div class="col-6 img-body">
-                                    <a href="#"><img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1.png"
-                                            class="img-fluid"></a>
-                                    <div class="img-content">
-                                        <h4>Koç Holding</h4>
-                                        <h5>Makine yönetimi Sitesi</h5>
-                                    </div>
+                        <div class="swiper-slide sosyal all">
+                            <div class="img-body">
+                                <a href="#"><img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1.png"
+                                        class="img-fluid"></a>
+                                <div class="img-content">
+                                    <h4>Koç Holding Sosyal</h4>
+                                    <h5>Makine yönetimi Sitesi</h5>
                                 </div>
                             </div>
                         </div>
 
-                        <div class="swiper-slide atest all">
-                            <div class="row">
-                                <div class="col-6 img-body">
-                                    <a href="#"><img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1.png"
-                                            class="img-fluid"></a>
-                                    <div class="img-content">
-                                        <h4>Koç Holding</h4>
-                                        <h5>Makine yönetimi Sitesi</h5>
-                                    </div>
+                        <div class="swiper-slide website all">
+                            <div class="img-body">
+                                <a href="#"><img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1.png"
+                                        class="img-fluid"></a>
+                                <div class="img-content">
+                                    <h4>Koç Holding Website</h4>
+                                    <h5>Makine yönetimi Sitesi</h5>
                                 </div>
-                                <div class="col-6 img-body">
-                                    <a href="#"><img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1.png"
-                                            class="img-fluid"></a>
-                                    <div class="img-content">
-                                        <h4>Koç Holding</h4>
-                                        <h5>Makine yönetimi Sitesi</h5>
-                                    </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide logo all">
+                            <div class="img-body">
+                                <a href="#"><img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1.png"
+                                        class="img-fluid"></a>
+                                <div class="img-content">
+                                    <h4>Koç Holding Logo</h4>
+                                    <h5>Makine yönetimi Sitesi</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide kurumsal all">
+                            <div class="img-body">
+                                <a href="#"><img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1.png"
+                                        class="img-fluid"></a>
+                                <div class="img-content">
+                                    <h4>Koç Holding Kurumsal</h4>
+                                    <h5>Makine yönetimi Sitesi</h5>
                                 </div>
                             </div>
                         </div>
