--- a/kopyalanacak.html
+++ b/kopyalanacak.html
@@ -69,7 +69,7 @@
       </div>
     </div>
     <i class="bi bi-list navbar-toggle d-block d-lg-none order-2 "></i>
-    <a class="btn-teklif d-none d-xl-block order-5" href="#">Teklif Al</a>
+    <a class="btn-teklif d-none d-xl-block order-5" href="index.html#teklif">Teklif Al</a>
 
 </header>
     <!-- Header Side END -->
