--- a/raf.html
+++ b/raf.html
@@ -36,7 +36,7 @@
       </div>
     </div>
     <i class="bi bi-list navbar-toggle d-block d-lg-none order-2 "></i>
-    <a class="btn-teklif d-none d-xl-block order-5" href="#">Teklif Al</a>
+    <a class="btn-teklif d-none d-xl-block order-5" href="index.html#teklif">Teklif Al</a>
 
 </header>
 <!-- Header Side END -->
@@ -80,7 +80,7 @@
       </div>
     </div>
     <i class="bi bi-list navbar-toggle d-block d-lg-none order-2 "></i>
-    <a class="btn-teklif d-none d-xl-block order-5" href="#">Teklif Al</a>
+    <a class="btn-teklif d-none d-xl-block order-5" href="index.html#teklif">Teklif Al</a>
 
 </header>
 <!-- Header Side END -->
