--- a/referans-detay.html
+++ b/referans-detay.html
@@ -40,9 +40,9 @@
             <div class="d-block d-lg-flex align-items-center navbar-container order-3 ">
                 <nav class="d-block d-lg-flex d-lg-flex pt-4 pt-lg-0">
                     <ol class="navbar flex-column flex-lg-row d-lg-flex d-block">
-                        <li><a class="active" href="index.html">anasayfa</a></li>
+                        <li><a href="index.html">anasayfa</a></li>
                         <li><a href="hakkimizda.html">hakkımızda</a></li>
-                        <li class="dropdown">
+                        <li class="active" class="dropdown">
                             <a href="JavaScript:Void(0)">Bütün Sayfalar</a>
                             <ul class="dropdown-content">
                                 <li><a href="hizmetler.html">Hizmetler</a></li>
