--- a/blog.html
+++ b/blog.html
@@ -40,7 +40,7 @@
             <div class="d-block d-lg-flex align-items-center navbar-container order-3 ">
                 <nav class="d-block d-lg-flex d-lg-flex pt-4 pt-lg-0">
                     <ol class="navbar flex-column flex-lg-row d-lg-flex d-block">
-                        <li><a class="active" href="index.html">anasayfa</a></li>
+                        <li><a href="index.html">anasayfa</a></li>
                         <li><a href="hakkimizda.html">hakkımızda</a></li>
                         <li class="dropdown">
                             <a href="JavaScript:Void(0)">Bütün Sayfalar</a>
@@ -58,7 +58,7 @@
                             </ul>
                         </li>
                         <li><a href="referanslar.html">Referanslar</a></li>
-                        <li><a href="blog.html">Blog</a></li>
+                        <li><a class="active" href="blog.html">Blog</a></li>
                         <li><a href="iletisim.html">İletişim</a></li>
                     </ol>
                 </nav>
