--- a/hizmet-detay.html
+++ b/hizmet-detay.html
@@ -40,10 +40,10 @@
             <div class="d-block d-lg-flex align-items-center navbar-container order-3 ">
                 <nav class="d-block d-lg-flex d-lg-flex pt-4 pt-lg-0">
                     <ol class="navbar flex-column flex-lg-row d-lg-flex d-block">
-                        <li><a class="active" href="index.html">anasayfa</a></li>
+                        <li><a href="index.html">anasayfa</a></li>
                         <li><a href="hakkimizda.html">hakkımızda</a></li>
                         <li class="dropdown">
-                            <a href="JavaScript:Void(0)">Bütün Sayfalar</a>
+                            <a class="active" href="JavaScript:Void(0)">Bütün Sayfalar</a>
                             <ul class="dropdown-content">
                                 <li><a href="hizmetler.html">Hizmetler</a></li>
                                 <li><a href="hizmet-detay.html">Hizmet Detay</a></li>
