--- a/referans-detay.html
+++ b/referans-detay.html
@@ -42,8 +42,8 @@
                     <ol class="navbar flex-column flex-lg-row d-lg-flex d-block">
                         <li><a href="index.html">anasayfa</a></li>
                         <li><a href="hakkimizda.html">hakkımızda</a></li>
-                        <li class="active" class="dropdown">
-                            <a href="JavaScript:Void(0)">Bütün Sayfalar</a>
+                        <li class="dropdown">
+                            <a class="active" href="JavaScript:Void(0)">Bütün Sayfalar</a>
                             <ul class="dropdown-content">
                                 <li><a href="hizmetler.html">Hizmetler</a></li>
                                 <li><a href="hizmet-detay.html">Hizmet Detay</a></li>
