--- a/hizmetler.html
+++ b/hizmetler.html
@@ -43,7 +43,7 @@
                         <li><a href="index.html">anasayfa</a></li>
                         <li><a href="hakkimizda.html">hakkımızda</a></li>
                         <li class="dropdown">
-                            <a href="JavaScript:Void(0)">Bütün Sayfalar</a>
+                            <a class="active" href="JavaScript:Void(0)">Bütün Sayfalar</a>
                             <ul class="dropdown-content">
                                 <li><a class="active"  href="hizmetler.html">Hizmetler</a></li>
                                 <li><a href="hizmet-detay.html">Hizmet Detay</a></li>
