--- a/iletisim.html
+++ b/iletisim.html
@@ -43,7 +43,7 @@
                         <li><a href="index.html">anasayfa</a></li>
                         <li><a href="hakkimizda.html">hakkımızda</a></li>
                         <li class="dropdown">
-                            <a class="active" href="JavaScript:Void(0)">Bütün Sayfalar</a>
+                            <a href="JavaScript:Void(0)">Bütün Sayfalar</a>
                             <ul class="dropdown-content">
                                 <li><a href="hizmetler.html">Hizmetler</a></li>
                                 <li><a href="hizmet-detay.html">Hizmet Detay</a></li>
@@ -59,7 +59,7 @@
                         </li>
                         <li><a href="referanslar.html">Referanslar</a></li>
                         <li><a href="blog.html">Blog</a></li>
-                        <li><a href="iletisim.html">İletişim</a></li>
+                        <li><a class="active" href="iletisim.html">İletişim</a></li>
                     </ol>
                 </nav>
             </div>
